--- a/inscripciones/src/main/resources/application.properties
+++ b/inscripciones/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.data.web.pageable.default-page-size=10
 spring.data.web.pageable.one-indexed-parameters=false
+server.port=${PORT:8080}
